--- a/sass/creative.scss
+++ b/sass/creative.scss
@@ -1,4 +1,6 @@
 @import 'variables.scss';
+@import 'slick.scss';
+@import 'slick-theme.scss';
 html {
     width: 100%;
     height: 100%;
@@ -320,29 +322,63 @@ header .header-content .header-content-inner {
     }
 }
 
-.carousel-websites .slick-slide {
-   margin: 10px;
-   &:first-child{
-       margin-left: 20px;
+.slick-slider{
+    padding-top:55px;
+}
+
+.slick-slide {
+   margin: 5px;
+   opacity: .5;
+   transform: scale(.8);
+   transform-origin: top center;
+   transition: all .35s ease-in-out;
+
+   &.slick-center{
+       opacity: 1;
+       transform: scale(1);
+       
    }
    
+    
+}
+
+
+
+.slick-prev,
+.slick-next{
+    top: 3%;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    &:before{
+        color: $accent;
+        font-size: 30px;
+    }
+}
+
+.slick-prev{
+    left: 48%;
+}
+
+.slick-next{
+    right: 48%;
+}
+
+.carousel-websites{
     img{
         -webkit-box-shadow: 3px 22px 15px -16px rgba(0,0,0,0.23);
         -moz-box-shadow: 3px 22px 15px -16px rgba(0,0,0,0.23);
         box-shadow: 3px 22px 15px -16px rgba(0,0,0,0.23);
         transition: all .35s ease-in-out;        
-        &:hover{
-            -webkit-box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32);
-            -moz-box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32);
-            box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32);            
+    }
+    .slick-center{
+        img{
+             -webkit-box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32);
+             -moz-box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32);
+             box-shadow: 3px 26px 15px -15px rgba(0,0,0,0.32); 
         }
     }
 }
-.carousel-mobile{
-    margin-top: 50px;
-}
-
-
 
 .call-to-action h2 {
     margin: 0 auto 20px;
@@ -637,7 +673,7 @@ footer {
 /*Tabs=========================*/
 
 .tab-content {
-    padding: 75px 0;
+    padding: 45px 0;
 }
 
 .nav-tabs {
@@ -753,5 +789,4 @@ footer {
 
 @import 'nav.scss';
 @import 'portfolio.scss';
-@import 'slick.scss';
-@import 'slick-theme.scss';
+
