--- a/css/creative.css
+++ b/css/creative.css
@@ -102,8 +102,8 @@
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url('/fonts/slick.eot?1535041989');
-  src: url('/fonts/slick.eot?&1535041989#iefix') format("embedded-opentype"), url('/fonts/slick.woff?1535041989') format("woff"), url('/fonts/slick.ttf?1535041989') format("truetype"), url('/fonts/slick.svg?1535041989#slick') format("svg");
+  src: url('/fonts/slick.eot?1536266122');
+  src: url('/fonts/slick.eot?&1536266122#iefix') format("embedded-opentype"), url('/fonts/slick.woff?1536266122') format("woff"), url('/fonts/slick.ttf?1536266122') format("truetype"), url('/fonts/slick.svg?1536266122#slick') format("svg");
   font-weight: normal;
   font-style: normal; }
 /* Arrows */
@@ -460,28 +460,30 @@ header {
   display: table-cell;
   vertical-align: middle; }
 
-/* line 230, ../sass/creative.scss */
-header .header-content .header-content-inner h1 {
-  margin-top: 0;
-  margin-bottom: 15px;
-  text-transform: uppercase;
-  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.4); }
-/* line 236, ../sass/creative.scss */
-header .header-content .header-content-inner h2 {
-  font-size: 25px;
-  line-height: 1.2em;
-  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.4);
-  padding: 10px;
-  display: inline-block; }
-/* line 243, ../sass/creative.scss */
-header .header-content .header-content-inner hr {
-  margin: 30px auto; }
-/* line 246, ../sass/creative.scss */
-header .header-content .header-content-inner p {
-  margin-bottom: 50px;
-  font-size: 16px;
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.7); }
+/* line 229, ../sass/creative.scss */
+header .header-content .header-content-inner {
+  text-align: center; }
+  /* line 231, ../sass/creative.scss */
+  header .header-content .header-content-inner h1 {
+    margin-top: 0;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.4); }
+  /* line 237, ../sass/creative.scss */
+  header .header-content .header-content-inner h2 {
+    font-size: 25px;
+    line-height: 1.2em;
+    text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.4);
+    display: inline-block;
+    color: white; }
+  /* line 244, ../sass/creative.scss */
+  header .header-content .header-content-inner hr {
+    margin: 30px auto; }
+  /* line 247, ../sass/creative.scss */
+  header .header-content .header-content-inner p {
+    font-size: 16px;
+    font-weight: 300;
+    color: white; }
 
 @media (min-width: 768px) {
   /* line 255, ../sass/creative.scss */
@@ -499,130 +501,138 @@ header .header-content .header-content-inner p {
       max-width: 820px; }
       /* line 265, ../sass/creative.scss */
       header .header-content .header-content-inner p {
-        margin-right: auto;
-        margin-left: auto;
         max-width: 80%;
         font-size: 18px; }
 
-  /* line 273, ../sass/creative.scss */
+  /* line 271, ../sass/creative.scss */
   section {
     padding: 150px 0; } }
-/* line 278, ../sass/creative.scss */
+/* line 276, ../sass/creative.scss */
 .section-heading {
   margin-top: 0;
   font-size: 3.5em;
   color: #4B4B4B; }
 
-/* line 284, ../sass/creative.scss */
+/* line 282, ../sass/creative.scss */
 .page-title {
   display: inline-block;
   font-size: 21px;
   padding-top: 10px; }
 
-/* line 290, ../sass/creative.scss */
+/* line 288, ../sass/creative.scss */
 #services {
   background: #fff; }
 
-/* line 294, ../sass/creative.scss */
+/* line 292, ../sass/creative.scss */
 .service-box {
   margin: 50px auto 0;
   padding: 5%;
   height: 500px;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); }
-  /* line 299, ../sass/creative.scss */
+  /* line 297, ../sass/creative.scss */
   .service-box img {
     width: 50%;
     margin: 0 auto; }
-  /* line 303, ../sass/creative.scss */
+  /* line 301, ../sass/creative.scss */
   .service-box h3 {
     margin-top: 0;
     color: #4B4B4B; }
-  /* line 307, ../sass/creative.scss */
+  /* line 305, ../sass/creative.scss */
   .service-box p {
     margin-bottom: 0; }
 
 @media (min-width: 992px) {
-  /* line 313, ../sass/creative.scss */
+  /* line 311, ../sass/creative.scss */
   .service-box {
     margin: 20px auto 0; } }
-/* line 318, ../sass/creative.scss */
+/* line 316, ../sass/creative.scss */
 #portfolio-home {
   padding: 75px 0 0; }
-  /* line 320, ../sass/creative.scss */
+  /* line 318, ../sass/creative.scss */
   #portfolio-home .cta {
     margin: 0 0 70px; }
 
-/* line 325, ../sass/creative.scss */
+/* line 323, ../sass/creative.scss */
+.project-title {
+  text-align: center;
+  margin-top: 10px;
+  opacity: 0;
+  font-size: 12px; }
+
+/* line 330, ../sass/creative.scss */
 .slick-slide {
   margin: 5px;
-  opacity: .5;
-  transform: scale(0.8);
+  opacity: .3;
+  transform: scale(0.7);
   transform-origin: top center;
   transition: all .35s ease-in-out; }
-  /* line 332, ../sass/creative.scss */
+  /* line 337, ../sass/creative.scss */
   .slick-slide.slick-center {
     opacity: 1;
     transform: scale(1); }
+    /* line 340, ../sass/creative.scss */
+    .slick-slide.slick-center .project-title {
+      opacity: 1; }
 
-/* line 343, ../sass/creative.scss */
+/* line 351, ../sass/creative.scss */
 .slick-prev,
 .slick-next {
   border-radius: 50%;
   width: 20px;
   height: 20px; }
-  /* line 348, ../sass/creative.scss */
+  /* line 356, ../sass/creative.scss */
   .slick-prev:before,
   .slick-next:before {
     color: #F03624;
     font-size: 30px; }
 
-/* line 354, ../sass/creative.scss */
+/* line 362, ../sass/creative.scss */
 .slick-prev {
   left: 20px;
   z-index: 3; }
 
-/* line 359, ../sass/creative.scss */
+/* line 367, ../sass/creative.scss */
 .slick-next {
   right: 20px; }
 
-/* line 364, ../sass/creative.scss */
+/* line 372, ../sass/creative.scss */
 .carousel-websites img {
   -webkit-box-shadow: 3px 22px 15px -16px rgba(0, 0, 0, 0.23);
   -moz-box-shadow: 3px 22px 15px -16px rgba(0, 0, 0, 0.23);
   box-shadow: 3px 22px 15px -16px rgba(0, 0, 0, 0.23);
   transition: all .35s ease-in-out; }
-/* line 371, ../sass/creative.scss */
+/* line 379, ../sass/creative.scss */
 .carousel-websites .slick-center img {
   -webkit-box-shadow: 3px 26px 15px -15px rgba(0, 0, 0, 0.32);
   -moz-box-shadow: 3px 26px 15px -15px rgba(0, 0, 0, 0.32);
   box-shadow: 3px 26px 15px -15px rgba(0, 0, 0, 0.32); }
 
-/* line 379, ../sass/creative.scss */
+/* line 387, ../sass/creative.scss */
 .call-to-action h2 {
   margin: 0 auto 20px; }
 
-/* line 383, ../sass/creative.scss */
+/* line 391, ../sass/creative.scss */
 .text-primary {
   color: #F03624; }
 
-/* line 387, ../sass/creative.scss */
+/* line 395, ../sass/creative.scss */
 .text-muted {
   color: #87a1ad; }
 
-/* line 391, ../sass/creative.scss */
+/* line 399, ../sass/creative.scss */
 .no-gutter > [class*=col-] {
   padding-right: 0;
   padding-left: 0; }
 
-/* line 396, ../sass/creative.scss */
+/* line 404, ../sass/creative.scss */
 strong {
   color: #F03624; }
 
-/* line 400, ../sass/creative.scss */
+/* line 408, ../sass/creative.scss */
 .bold {
   font-weight: bold; }
 
-/* line 404, ../sass/creative.scss */
+/* line 412, ../sass/creative.scss */
 .btn {
   border-radius: 3px;
   border: none;
@@ -631,60 +641,60 @@ strong {
   font-family: 'Titillium Web';
   font-weight: 700;
   font-family: "Titillium Web", Helvetica, sans-serif; }
-  /* line 412, ../sass/creative.scss */
+  /* line 420, ../sass/creative.scss */
   .btn:hover, .btn:focus {
     border: 3px solid #4B4B4B;
     color: #4B4B4B; }
 
-/* line 419, ../sass/creative.scss */
+/* line 427, ../sass/creative.scss */
 .btn-xl {
   padding: 15px 30px; }
 
-/* line 423, ../sass/creative.scss */
+/* line 431, ../sass/creative.scss */
 .btn-primary {
   color: #fff;
   background-color: #F03624;
   -webkit-transition: all .35s;
   -moz-transition: all .35s;
   transition: all .35s; }
-  /* line 429, ../sass/creative.scss */
+  /* line 437, ../sass/creative.scss */
   .btn-primary:hover {
     color: #fff;
     border: none;
-    background-color: #d3200e;
+    background-color: #f24c3c;
     transform: scale(1.02);
     box-shadow: 0px 14px 12px rgba(0, 0, 0, 0.5); }
-  /* line 436, ../sass/creative.scss */
-  .btn-primary:focus {
+  /* line 444, ../sass/creative.scss */
+  .btn-primary:focus, .btn-primary:active {
     color: #fff;
     border: none;
     background-color: #4B4B4B; }
 
-/* line 443, ../sass/creative.scss */
+/* line 452, ../sass/creative.scss */
 ::-moz-selection,
 ::selection {
   text-shadow: none;
   color: #fff;
   background: #222; }
 
-/* line 451, ../sass/creative.scss */
+/* line 460, ../sass/creative.scss */
 img::selection, img::-moz-selection {
   color: #fff;
   background: 0 0; }
 
-/* line 458, ../sass/creative.scss */
+/* line 467, ../sass/creative.scss */
 .img-round {
   border-radius: 50%; }
 
-/* line 462, ../sass/creative.scss */
+/* line 471, ../sass/creative.scss */
 .img-center {
   margin: 0 auto; }
 
-/* line 466, ../sass/creative.scss */
+/* line 475, ../sass/creative.scss */
 body {
   webkit-tap-highlight-color: #222; }
 
-/* line 470, ../sass/creative.scss */
+/* line 479, ../sass/creative.scss */
 input,
 textarea {
   width: 100%;
@@ -697,7 +707,7 @@ textarea {
   border: 3px solid #F03624;
   transition: all 0.2s ease-in-out; }
 
-/* line 483, ../sass/creative.scss */
+/* line 492, ../sass/creative.scss */
 input:focus,
 textarea:focus {
   outline: none;
@@ -705,96 +715,96 @@ textarea:focus {
   transform: scale(1.05);
   box-shadow: 0px 14px 12px rgba(0, 0, 0, 0.5); }
 
-/* line 491, ../sass/creative.scss */
+/* line 500, ../sass/creative.scss */
 ::-webkit-input-placeholder {
   color: #eceff1; }
 
-/* line 495, ../sass/creative.scss */
+/* line 504, ../sass/creative.scss */
 :-moz-placeholder {
   color: #eceff1; }
 
-/* line 499, ../sass/creative.scss */
+/* line 508, ../sass/creative.scss */
 ::-moz-placeholder {
   color: #eceff1; }
 
-/* line 503, ../sass/creative.scss */
+/* line 512, ../sass/creative.scss */
 :-ms-input-placeholder {
   color: #eceff1; }
 
-/* line 507, ../sass/creative.scss */
+/* line 516, ../sass/creative.scss */
 footer {
   color: #fff;
   padding: 25px 0 15px;
   font-size: 1.2em;
   clear: both; }
-  /* line 512, ../sass/creative.scss */
+  /* line 521, ../sass/creative.scss */
   footer a {
     display: inline-block;
     margin-bottom: 10px; }
-  /* line 516, ../sass/creative.scss */
+  /* line 525, ../sass/creative.scss */
   footer p {
     font-size: 1em;
     margin-bottom: 10px; }
-  /* line 520, ../sass/creative.scss */
+  /* line 529, ../sass/creative.scss */
   footer .small-text {
     font-size: 0.7em;
     color: rgba(255, 255, 255, 0.7); }
-  /* line 524, ../sass/creative.scss */
+  /* line 533, ../sass/creative.scss */
   footer .footer-logo {
     width: 100px;
     height: auto; }
 
-/* line 530, ../sass/creative.scss */
+/* line 539, ../sass/creative.scss */
 #clients {
   background: #fff; }
-  /* line 532, ../sass/creative.scss */
+  /* line 541, ../sass/creative.scss */
   #clients .logos {
     display: flex;
     flex-wrap: wrap;
     margin: 0;
     padding: 0; }
-    /* line 537, ../sass/creative.scss */
+    /* line 546, ../sass/creative.scss */
     #clients .logos li {
       list-style-type: none;
       flex-grow: 1;
       text-align: center;
       opacity: 0.6; }
-      /* line 542, ../sass/creative.scss */
+      /* line 551, ../sass/creative.scss */
       #clients .logos li img {
         max-width: 150px;
         opacity: 0.5;
         transform: scale(1);
         transition: all 0.5s; }
-        /* line 547, ../sass/creative.scss */
+        /* line 556, ../sass/creative.scss */
         #clients .logos li img:hover {
           opacity: 1;
           transform: scale(1.05); }
-  /* line 555, ../sass/creative.scss */
+  /* line 564, ../sass/creative.scss */
   #clients .testimonials h3 {
     margin-top: 0; }
-  /* line 558, ../sass/creative.scss */
+  /* line 567, ../sass/creative.scss */
   #clients .testimonials h4 {
     text-transform: uppercase;
     font-size: 1em; }
-  /* line 563, ../sass/creative.scss */
+  /* line 572, ../sass/creative.scss */
   #clients .testimonial {
     margin-bottom: 50px; }
 
-/* line 568, ../sass/creative.scss */
+/* line 577, ../sass/creative.scss */
 .copy {
   text-align: center; }
 
-/* line 572, ../sass/creative.scss */
+/* line 581, ../sass/creative.scss */
 .social {
   margin-right: 15px; }
 
-/* line 576, ../sass/creative.scss */
+/* line 585, ../sass/creative.scss */
 .contact-me {
   position: fixed;
   top: 90px;
   right: 2px;
   text-align: center; }
-  /* line 581, ../sass/creative.scss */
+  /* line 590, ../sass/creative.scss */
   .contact-me a {
     background: #F03624;
     display: block;
@@ -803,16 +813,16 @@ footer {
     padding: 5px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
     opacity: .9; }
-    /* line 589, ../sass/creative.scss */
+    /* line 598, ../sass/creative.scss */
     .contact-me a:hover {
       box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
       opacity: 1; }
-    /* line 593, ../sass/creative.scss */
+    /* line 602, ../sass/creative.scss */
     .contact-me a img {
       width: 30px;
       height: 30px; }
 
-/* line 600, ../sass/creative.scss */
+/* line 609, ../sass/creative.scss */
 #contactus {
   color: #fff;
   background: url(../img/fondo-dave.jpg) no-repeat;
@@ -820,41 +830,41 @@ footer {
   background-size: cover;
   background-attachment: fixed;
   overflow: hidden; }
-  /* line 607, ../sass/creative.scss */
+  /* line 616, ../sass/creative.scss */
   #contactus .section-heading {
     color: #fff; }
-  /* line 610, ../sass/creative.scss */
+  /* line 619, ../sass/creative.scss */
   #contactus a {
     color: #fff; }
-  /* line 613, ../sass/creative.scss */
+  /* line 622, ../sass/creative.scss */
   #contactus hr {
     margin-bottom: 45px; }
 
-/* line 618, ../sass/creative.scss */
+/* line 627, ../sass/creative.scss */
 .captcha-container {
   margin-bottom: 15px;
   display: flex;
   justify-content: center; }
 
-/* line 624, ../sass/creative.scss */
+/* line 633, ../sass/creative.scss */
 .g-captcha {
   width: 300px;
   margin: 0 auto; }
 
-/* line 629, ../sass/creative.scss */
+/* line 638, ../sass/creative.scss */
 .sub {
   text-transform: uppercase; }
 
-/* line 633, ../sass/creative.scss */
+/* line 642, ../sass/creative.scss */
 .add-padding {
   padding: 0 15%; }
 
-/* line 637, ../sass/creative.scss */
+/* line 646, ../sass/creative.scss */
 .no-gutter > [class*='col-'] {
   padding-right: 0;
   padding-left: 0; }
 
-/* line 642, ../sass/creative.scss */
+/* line 651, ../sass/creative.scss */
 .trans {
   position: fixed;
   border-radius: 50px;
@@ -867,52 +877,52 @@ footer {
   width: 30px;
   z-index: 999; }
 
-/* line 655, ../sass/creative.scss */
+/* line 664, ../sass/creative.scss */
 #about {
   background: url(../img/backloop.png) repeat-y;
   background-size: contain; }
 
-/* line 660, ../sass/creative.scss */
+/* line 669, ../sass/creative.scss */
 .space {
   display: block;
-  height: 50px; }
+  height: 100px; }
 
-/* line 665, ../sass/creative.scss */
+/* line 674, ../sass/creative.scss */
 .add-margin-bottom {
   margin-bottom: 30px; }
 
 /*Tabs=========================*/
-/* line 671, ../sass/creative.scss */
+/* line 680, ../sass/creative.scss */
 .tab-content {
   padding: 45px 0; }
 
-/* line 675, ../sass/creative.scss */
+/* line 684, ../sass/creative.scss */
 .nav-tabs {
   display: flex; }
 
-/* line 679, ../sass/creative.scss */
+/* line 688, ../sass/creative.scss */
 .nav-tabs > li {
   flex-grow: 1;
   text-align: center;
   border-bottom: 1px solid white;
   width: 50%; }
-  /* line 684, ../sass/creative.scss */
+  /* line 693, ../sass/creative.scss */
   .nav-tabs > li.active {
     border-bottom: 1px solid #F03624; }
-  /* line 687, ../sass/creative.scss */
+  /* line 696, ../sass/creative.scss */
   .nav-tabs > li a {
     border: none;
     font-size: 21px;
     text-transform: uppercase;
     color: lightgray; }
 
-/* line 695, ../sass/creative.scss */
+/* line 704, ../sass/creative.scss */
 .nav > li > a:focus,
 .nav > li > a:hover {
   background: transparent;
   border: none; }
 
-/* line 701, ../sass/creative.scss */
+/* line 710, ../sass/creative.scss */
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:focus,
 .nav-tabs > li.active > a:hover {
@@ -921,12 +931,12 @@ footer {
   border-bottom: 3px red;
   background: transparent; }
 
-/* line 709, ../sass/creative.scss */
+/* line 718, ../sass/creative.scss */
 .with-lan {
   margin-top: 20px; }
 
 /* bootstrap hack: fix content width inside hidden tabs */
-/* line 714, ../sass/creative.scss */
+/* line 723, ../sass/creative.scss */
 .tab-content > .tab-pane,
 .pill-content > .pill-pane {
   display: block;
@@ -936,7 +946,7 @@ footer {
   overflow-y: hidden;
   /* no-overflow                */ }
 
-/* line 720, ../sass/creative.scss */
+/* line 729, ../sass/creative.scss */
 .tab-content > .active,
 .pill-content > .active {
   height: auto;
@@ -945,33 +955,33 @@ footer {
 /* bootstrap hack end */
 /*Responsive====================*/
 @media only screen and (max-width: 768px) {
-  /* line 729, ../sass/creative.scss */
+  /* line 738, ../sass/creative.scss */
   .navbar-default {
     box-shadow: 0 9px 20px rgba(0, 0, 0, 0.06), 0 2px 3px rgba(0, 0, 0, 0.04); }
 
-  /* line 732, ../sass/creative.scss */
+  /* line 741, ../sass/creative.scss */
   #about {
     text-align: center; }
 
-  /* line 735, ../sass/creative.scss */
+  /* line 744, ../sass/creative.scss */
   #services img {
     margin: 0 auto; }
 
-  /* line 738, ../sass/creative.scss */
+  /* line 747, ../sass/creative.scss */
   .bg-secondary {
     text-align: center; }
 
-  /* line 741, ../sass/creative.scss */
+  /* line 750, ../sass/creative.scss */
   .lan {
     position: static;
     text-align: center;
     padding: 10px; } }
 @media only screen and (max-width: 430px) {
-  /* line 749, ../sass/creative.scss */
+  /* line 758, ../sass/creative.scss */
   header .header-content .header-content-inner h1 {
     font-size: 1px; }
 
-  /* line 752, ../sass/creative.scss */
+  /* line 761, ../sass/creative.scss */
   .contact-me {
     display: flex;
     width: 100%;
@@ -980,29 +990,29 @@ footer {
     bottom: 0;
     background: #F03624;
     right: initial; }
-    /* line 760, ../sass/creative.scss */
+    /* line 769, ../sass/creative.scss */
     .contact-me a {
       flex-grow: 1;
       border-radius: 0;
       box-shadow: none;
       padding: 5px; }
-      /* line 765, ../sass/creative.scss */
+      /* line 774, ../sass/creative.scss */
       .contact-me a:hover {
         box-shadow: none; }
 
-  /* line 770, ../sass/creative.scss */
+  /* line 779, ../sass/creative.scss */
   footer {
     padding-bottom: 50px; }
 
-  /* line 773, ../sass/creative.scss */
+  /* line 782, ../sass/creative.scss */
   .section-heading {
     font-size: 2.5em; }
 
-  /* line 777, ../sass/creative.scss */
+  /* line 786, ../sass/creative.scss */
   #hosting h2 {
     font-size: 1.7em; }
 
-  /* line 781, ../sass/creative.scss */
+  /* line 790, ../sass/creative.scss */
   .trans {
     bottom: 80px; } }
 /* line 1, ../sass/_nav.scss */
