--- a/sass/creative.scss
+++ b/sass/creative.scss
@@ -227,6 +227,7 @@ header {
 }
 
 header .header-content .header-content-inner {
+    text-align: center;
     h1 {
         margin-top: 0;
         margin-bottom: 15px;
@@ -237,17 +238,16 @@ header .header-content .header-content-inner {
         font-size: 25px;
         line-height: 1.2em;
         text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.4);
-        padding: 10px;
         display: inline-block;
+        color: white;
     }
     hr {
         margin: 30px auto;
     }
     p {
-        margin-bottom: 50px;
         font-size: 16px;
         font-weight: 300;
-        color: rgba(255, 255, 255, 0.7);
+        color: white;
     }
 }
 
@@ -263,8 +263,6 @@ header .header-content .header-content-inner {
             margin-left: auto;
             max-width: 820px;
             p {
-                margin-right: auto;
-                margin-left: auto;
                 max-width: 80%;
                 font-size: 18px;
             }
@@ -322,16 +320,26 @@ header .header-content .header-content-inner {
     }
 }
 
+.project-title{
+    text-align: center;
+    margin-top: 10px;
+    opacity: 0;
+    font-size: 12px;
+}
+
 .slick-slide {
    margin: 5px;
-   opacity: .5;
-   transform: scale(.8);
+   opacity: .3;
+   transform: scale(.7);
    transform-origin: top center;
-   transition: all .35s ease-in-out;
+   transition: all .35s ease-in-out;   
 
    &.slick-center{
        opacity: 1;
        transform: scale(1);
+       .project-title{
+           opacity: 1;
+       }
        
    }
    
@@ -429,11 +437,12 @@ strong {
     &:hover {
         color: #fff;
         border: none;
-        background-color: darken($accent, 10%);
+        background-color: lighten($accent, 5%);
         transform: scale(1.02);
         box-shadow: 0px 14px 12px rgba(0, 0, 0, 0.5)
     }
-    &:focus {
+    &:focus,
+    &:active {
         color: #fff;
         border: none;
         background-color: $primary;
@@ -659,7 +668,7 @@ footer {
 
 .space {
     display: block;
-    height: 50px;
+    height: 100px;
 }
 
 .add-margin-bottom {
