--- a/sass/creative.scss
+++ b/sass/creative.scss
@@ -9,6 +9,7 @@ html {
 body {
     width: 100%;
     height: 100%;
+    font-size: 18px;
     font-family: $primary-text;
 }
 
@@ -116,6 +117,7 @@ body {
 
 .profile{
     max-width: 200px;
+    width: 100%;
 }
 
 hr {
@@ -151,7 +153,6 @@ h6 {
 
 p {
     margin-bottom: 20px;
-    font-size: 18px;
     line-height: 1.5;
 }
 
@@ -226,7 +227,7 @@ header {
     vertical-align: middle;
 }
 
-header .header-content .header-content-inner {
+.header-content-inner {
     text-align: center;
     h1 {
         margin-top: 0;
@@ -249,6 +250,10 @@ header .header-content .header-content-inner {
         font-weight: 300;
         color: white;
     }
+    .btn{
+        margin: 10px;
+    }
+    
 }
 
 @media (min-width: 768px) {
@@ -751,6 +756,12 @@ footer {
         position: static;
         text-align: center;
         padding: 10px;
+    }
+    #about {
+        li,
+        h3{
+            text-align: left;
+        }
     }
 }
 
