--- a/sass/creative.scss
+++ b/sass/creative.scss
@@ -629,6 +629,26 @@ footer {
     }
 }
 
+.contact-item{
+    border: 3px solid white;
+    border-radius: 15px;
+    display: block;
+    padding: 5%;
+    background: $accent;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    transition: all .35 ease-in-out;
+    &:hover{
+        border: 3px solid white;
+        text-decoration: none; 
+        transform: scale(1.05);
+        box-shadow: 0px 14px 12px rgba(0, 0, 0, 0.5);
+    }
+    .fa{
+        font-size: 50px;
+        display: block;
+        margin-bottom: 25px;
+    }
+}
 .captcha-container {
     margin-bottom: 15px;
     display:flex;
